瑞吉外卖-匿名群聊-新增套餐点击后的详情和商品的减去

--- a/src/main/resources/backend/index.html
+++ b/src/main/resources/backend/index.html
@@ -135,15 +135,24 @@
                         children: [
                             {
                                 id: '8',
-                                name: '员工管理',
+                                name: '员工管理1',
                                 url: 'page/member/list.html',
                                 icon: 'icon-member',
                             },
                             {
                                 id: '9',
-                                name: '员工管理',
+                                name: '员工管理2',
                                 url: 'page/member/list.html',
-                                icon: 'icon-member',
+                                icon: 'icon-member'
+                            ,
+                            children: [
+                {
+                    id: '10',
+                    name: '员工管理3',
+                    url: 'page/member/list.html',
+                    icon: 'icon-member',
+                },
+            ]
                             }
                         ]
                     },
