新增疑难解答

--- a/src/main/resources/front/index.html
+++ b/src/main/resources/front/index.html
@@ -32,7 +32,7 @@
         <div class="divStatic">
           <img src="./images/logo.png"  class="logo"/>
           <div class="divDesc">
-            <div class="divName">菩提阁餐厅</div>
+            <div class="divName">菩提阁</div>
             <div class="divSend">
                 <!--<span><img src="./images/time.png"/> 距离1.5km</span>-->
                 <!--<span><img src="./images/money.png"/> 配送费6元</span>-->
