--- a/src/main/resources/front/index.html
+++ b/src/main/resources/front/index.html
@@ -63,7 +63,7 @@
               <div>
                 <div class="divName">{{item.name}}</div>
                 <div class="divDesc">{{item.description}}</div>
-                <div class="divDesc">{{'月销' + (item.saleNum ? item.saleNum : 0)  }}</div>
+                <div class="divDesc">{{'销量' + (item.saleNum ? item.saleNum : 0)  }}</div>
                 <div class="divBottom"><span>￥</span><span>{{item.price/100}}</span></div>
                 <div class="divNum">
                   <div class="divSubtract" v-if="item.number > 0">
@@ -668,7 +668,18 @@
                               "package": "prepay_id="+res.map.bodyAsString,
                               "signType": "RSA-SHA256",     //微信签名方式：
                               "paySign": res.map.paySign //微信签名
-                          })
+                          },
+                              function(res) {
+                                  if (res.err_msg == "get_brand_wcpay_request:ok") {
+                                      // 使用以上方式判断前端返回,微信团队郑重提示：
+                                      //res.err_msg将在用户支付成功后返回ok，但并不保证它绝对可靠。
+                                      // alert("支付成功")
+                                      // this.initData()
+                                      location.reload();
+                                      //再次调用查单接口检验是否支付成功
+                                      //算了，不想查了，实际精准业务要加上
+                                  }
+                              })
                       })
                       .catch(err => {
                           console.error(err); // 输出错误信息
